# PDAJ-2024-25

./: .gitignore  README.md
01/crate-sample/src/: lib.rs
01/project_example/: Cargo.toml
01/project_example/src/: lib.rs  main.rs
02/vezbe_02/: Cargo.toml
03/vezbe_03/: Cargo.toml
04/vezbe_04/: Cargo.toml
05/vezbe_05/: Cargo.toml
06/vezbe_06/: Cargo.toml
07/vezbe_07/: Cargo.toml
08/vezbe_08/: Cargo.toml
